@startuml

title __PRACTICA5's Class Diagram__\n

  namespace practica5 {
    class practica5.GreenBlinkingTrafficState {
        + GreenBlinkingTrafficState()
        + doAction()
        + getColor()
        + getSound()
    }
  }
  

  namespace practica5 {
    class practica5.GreenTrafficState {
        + GreenTrafficState()
        + doAction()
        + getColor()
        + getSound()
    }
  }
  

  namespace practica5 {
    class practica5.Main {
        {static} + main()
        {static} ~ wait_()
    }
  }
  

  namespace practica5 {
    class practica5.RedTrafficState {
        + RedTrafficState()
        + doAction()
        + getColor()
    }
  }
  

  namespace practica5 {
    class practica5.TrafficLight {
        + TrafficLight()
        + changeState()
        + doAction()
    }
  }
  

  namespace practica5 {
    abstract class practica5.TrafficState {
        + TrafficState()
        {abstract} + doAction()
        {abstract} + getColor()
    }
  }
  

  namespace practica5 {
    class practica5.YellowTrafficState {
        + YellowTrafficState()
        + doAction()
        + getColor()
    }
  }
  

  practica5.GreenBlinkingTrafficState -up-|> practica5.TrafficState
  practica5.GreenTrafficState -up-|> practica5.TrafficState
  practica5.Main -up-|> javax.swing.JFrame
  practica5.RedTrafficState -up-|> practica5.TrafficState
  practica5.TrafficLight o-- practica5.TrafficState : state
  practica5.TrafficState o-- practica5.TrafficLight : trafficLight
  practica5.YellowTrafficState -up-|> practica5.TrafficState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
